--- a/config.env.sample
+++ b/config.env.sample
@@ -17,8 +17,8 @@ _____REMOVE_____THIS_____LINE_____=true
 
 
 # Get them from https://my.telegram.org/
-API_ID=""
-API_HASH=""
+API_ID="7232003"
+API_HASH="3fed6e5d89a31093ae8c95937d41b0c7"
 
 
 # Mongodb url from https://cloud.mongodb.com/
@@ -27,7 +27,7 @@ DATABASE_URL=""
 
 
 # Telegram Log Channel ID
-LOG_CHANNEL_ID=""
+LOG_CHANNEL_ID="-1001477334559"
 
 
 # one of USERGE MODE
@@ -39,7 +39,7 @@ LOG_CHANNEL_ID=""
 
 
 # Set true if your like to use unofficial plugins
-LOAD_UNOFFICIAL_PLUGINS=false
+LOAD_UNOFFICIAL_PLUGINS=true
 
 
 # assert running single Userge instance to prevent from AUTH_KEY_DUPLICATED error.
@@ -48,7 +48,7 @@ ASSERT_SINGLE_INSTANCE=false
 
 # This is best if you wanna add your own plugins
 # Set this to fork of https://github.com/UsergeTeam/Custom-Plugins and add your plugins
-CUSTOM_PLUGINS_REPO=""
+CUSTOM_PLUGINS_REPO="https://github.com/UsergeTeam/Custom-Plugins"
 
 
 # Userbot Workers Count : Default = cpu_count + 4
@@ -56,7 +56,7 @@ WORKERS=""
 
 
 # Telegram Chat id For Updates of Rss Feed
-RSS_CHAT_ID=""
+RSS_CHAT_ID="-1001477334559"
 
 
 # Googel Drive API Keys from https://console.developers.google.com/
@@ -121,7 +121,7 @@ SUDO_TRIGGER="!"
 
 
 # set this to your USERGE fork on GitHub
-UPSTREAM_REPO=""
+UPSTREAM_REPO="https://github.com/NubasFop/Userge"
 
 
 # single character for finished progress
@@ -133,7 +133,7 @@ UNFINISHED_PROGRESS_STR='░'
 
 
 # custom name for your sticker pack
-CUSTOM_PACK_NAME=""
+CUSTOM_PACK_NAME="@NubAsFop's Kang Pack"
 
 # custom audio max duration for voice chat plugin
 MAX_DURATION=900
@@ -170,8 +170,8 @@ HU_STRING_SESSION=""
 # >>> BOT MODE <<< #
 # use userge as bot
 # get this from https://t.me/botfather if you like to use userge as a bot
-BOT_TOKEN=""
-OWNER_ID=""  # your user_id
+BOT_TOKEN="1856576088:AAHoGT2o2aHNmoMmADtEy---e4X_V_URnGo"
+OWNER_ID="1710614966"  # your user_id
 
 
 # >>> DUAL MODE <<< #
